--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html
   body
   .app-title.navbar.navbar-expand-md.navbar-light.bg-light
     .navbar-brand 日報
+    ul.navbar-nav.ml-auto
   .container
     - if flash.notice.present?
       .alert.alert-success= flash.notice
