--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,5 +1,10 @@
 <div class= "contents">
   <h1>日報一覧</h1>
+  <% if user_signed_in? %>
+    <div class="greeting">
+      <%= "ようこそ、#{current_user.name}さん" %>
+    </div> 
+  <% end %>
   <%= link_to "新規作成", new_report_path, class: "btn" %>
   <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn" %>
   <div class="report">
