修正箇所修正

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
   .app-title.navbar.navbar-expand-md.navbar-light.bg-light
-    .navbar-brand 日報
+    .navbar-brand 日記
     ul.navbar-nav.ml-auto
   .container
     - if flash.notice.present?
