--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,5 +1,5 @@
 <div class= "contents">
-  <h1>日報一覧</h1>
+  <h1>日記一覧</h1>
   <% if user_signed_in? %>
     <div class="greeting">
       <%= "ようこそ、#{current_user.name}さん" %>
