--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,5 +1,5 @@
 <div class= "contents">
-  <h1>日報の新規作成</h1>
+  <h1>日記の新規作成</h1>
   <div class='nav'>
     <div class='inner'>
       <%= link_to "一覧へ", reports_path, class: "nav-link" %>
